# bde-vote-web

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md
bde-vote-back/: Cargo.toml  create.sql  test.http
bde-vote-back/src/: database.rs  lib.rs  mailer.rs  main.rs  student_checker.rs  voter.rs
bde-vote-front/: Cargo.toml  bootstrap.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
bde-vote-front/scss/: components.scss  index.scss
bde-vote-front/src/: app.rs  confirmed_vote.rs  home.rs  lib.rs  list_panel.rs  vote_btn.rs
bde-vote-front/static/: confirmed.html  index.html
