[package]
name = "bde-vote-back"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
serde = "1.0.104"
env_logger = "0.7.1"
lettre = "0.9.2"
lettre_email = "0.9.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mysql = "18.0.0"