[package]
name = "bde-vote-front"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "^0.4.8"
wasm-bindgen = "^0.2.59"
web_logger = "^0.2.0"
yew = { version = "0.14.3", features = ["web_sys"] }
yew-router = { verion = "0.11.0", features = ["web_sys"] }
wee_alloc = { version = "^0.4.5", optional = true }
web-sys = { version = "0.3.36", features = ["KeyboardEvent", "HtmlInputElement", "Event"] }
regex = "1.3.4"
serde = { version = "1.0.104", feature = ["derive"] }
serde_json = "1.0.51"
anyhow = "1.0.28"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
